# less-db-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DIVERGENCE.md  PLAN.md  README.md  justfile
crates/less-db/: Cargo.toml
crates/less-db-wasm/: Cargo.toml
crates/less-db-wasm/js/: package-lock.json  package.json  tsconfig.json  vitest.bench.config.ts  vitest.browser.config.ts  vitest.config.ts
crates/less-db-wasm/js/bench/: bench-worker.ts  comparison.bench.ts  shared.ts
crates/less-db-wasm/js/browser-tests/: opfs-bulk.test.ts  opfs-crud.test.ts  opfs-helpers.ts  opfs-persistence.test.ts  opfs-query.test.ts  opfs-reactive.test.ts  opfs-sync.test.ts  opfs-test-worker.ts
crates/less-db-wasm/js/src/: IndexedDbBackend.test.ts  IndexedDbBackend.ts  LessDb.test.ts  LessDb.ts  collection.test.ts  collection.ts  conversions.ts  createDb.test.ts  createOpfsDb.ts  index.ts  schema.ts  types.ts  wasm-init.ts
crates/less-db-wasm/src/: adapter.rs  collection.rs  conversions.rs  error.rs  js_backend.rs  lib.rs  middleware.rs  wasm_sqlite.rs  wasm_sqlite_backend.rs
crates/less-db/src/: error.rs  lib.rs  types.rs
crates/less-db/src/collection/: autofill.rs  builder.rs  migrate.rs  mod.rs
crates/less-db/src/crdt/: mod.rs  patch_log.rs  schema_aware.rs
crates/less-db/src/index/: mod.rs  planner.rs  types.rs
crates/less-db/src/middleware/: mod.rs  typed_adapter.rs  types.rs
crates/less-db/src/patch/: diff.rs  mod.rs
crates/less-db/src/query/: execute.rs  mod.rs  operators.rs  types.rs
crates/less-db/src/reactive/: adapter.rs  event.rs  event_emitter.rs  mod.rs  query_fields.rs
crates/less-db/src/schema/: mod.rs  node.rs  serialize.rs  validate.rs
crates/less-db/src/storage/: adapter.rs  memory_mapped.rs  mod.rs  record_manager.rs  remote_changes.rs  sqlite.rs  traits.rs
crates/less-db/src/sync/: manager.rs  mod.rs  scheduler.rs  types.rs
crates/less-db/tests/: collection.rs  crdt_smoke.rs  index.rs  middleware.rs  query.rs  reactive.rs  scenarios.rs  schema.rs  storage.rs  sync.rs
crates/less-db/tests/collection/: autofill.rs  builder.rs  migrate.rs  mod.rs
crates/less-db/tests/index/: planner.rs
crates/less-db/tests/middleware/: typed_adapter.rs
crates/less-db/tests/patch/: changeset.rs  diff.rs  mod.rs
crates/less-db/tests/query/: execute.rs  operators.rs
crates/less-db/tests/reactive/: adapter.rs  event.rs  event_emitter.rs  mod.rs  query_fields.rs
crates/less-db/tests/scenarios/: integration.rs
crates/less-db/tests/schema/: node.rs  serialize.rs  validate.rs
crates/less-db/tests/storage/: adapter.rs  mod.rs  sqlite.rs  (+2 more)
(+43 files in other folders)
