[package]
name = "less-db-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "WebAssembly bindings for less-db"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
less-db = { path = "../less-db", default-features = false, features = ["js"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
async-trait = "0.1"
sqlite-wasm-rs = "0.5"
sqlite-wasm-vfs = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
